[package]
name = "workers_pool"
version = "0.1.1"
edition = "2021"
authors = ["estchd"]
description = "A long running threadpool for parallel task execution"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/estchd/workers_pool/"
repository = "https://github.com/estchd/workers_pool/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
num_cpus = "1.13.1"
